Boolean_set_operations_2/demo/Boolean_set_operations_2/errors/ISO does not permit
This error was genrated on 17/7/18 at 12:33 IST

In file included 
from /home/apurva/Desktop/cgal-public-dev-gsoc2018-bso_demo-apurva/Boolean_set_operations_2/demo/Boolean_set_operations_2/Boolean_set_operations_2.cpp:80:0:

/home/apurva/Desktop/cgal-public-dev-gsoc2018-bso_demo-apurva/Boolean_set_operations_2/demo/Boolean_set_operations_2/include/QT5/Graphics_view_linear_polygon_input.h:66:80: error: ISO C++ forbids declaration of ‘Graphics_view_linear_polygon_input’ with no type [-fpermissive]
     Graphics_view_linear_polygon_input(QObject* aParent, QGraphicsScene* aScene)
                                                                                ^
/home/apurva/Desktop/cgal-public-dev-gsoc2018-bso_demo-apurva/Boolean_set_operations_2/demo/Boolean_set_operations_2/include/QT5/Graphics_view_linear_polygon_input.h:94:41: error: declaration of ‘~Graphics_view_linear_polygon_input’ as member of ‘CGAL::Qt::GraphicsViewLinearPolygonInput<K>’
     ~Graphics_view_linear_polygon_input()
                                         ^
/home/apurva/Desktop/cgal-public-dev-gsoc2018-bso_demo-apurva/Boolean_set_operations_2/demo/Boolean_set_operations_2/include/QT5/Graphics_view_linear_polygon_input.h: In member function ‘int CGAL::Qt::GraphicsViewLinearPolygonInput<K>::Graphics_view_linear_polygon_input(QObject*, QGraphicsScene*)’:

/home/apurva/Desktop/cgal-public-dev-gsoc2018-bso_demo-apurva/Boolean_set_operations_2/demo/Boolean_set_operations_2/include/QT5/Graphics_view_linear_polygon_input.h:68:9: error: only constructors take member initializers
         GraphicsViewInput  ( aParent         )
         ^
/home/apurva/Desktop/cgal-public-dev-gsoc2018-bso_demo-apurva/Boolean_set_operations_2/demo/Boolean_set_operations_2/Boolean_set_operations_2.cpp: At global scope:

/home/apurva/Desktop/cgal-public-dev-gsoc2018-bso_demo-apurva/Boolean_set_operations_2/demo/Boolean_set_operations_2/Boolean_set_operations_2.cpp:453:13: error: ‘Graphics_view_linear_polygon_input’ in namespace ‘CGAL::Qt’ does not name a template type
   CGAL::Qt::Graphics_view_linear_polygon_input<Kernel>*     mLinearInput ;
             ^
CMakeFiles/Boolean_set_operations_2.dir/build.make:154: recipe for target 'CMakeFiles/Boolean_set_operations_2.dir/Boolean_set_operations_2.cpp.o' failed
make[2]: *** [CMakeFiles/Boolean_set_operations_2.dir/Boolean_set_operations_2.cpp.o] Error 1
CMakeFiles/Makefile2:515: recipe for target 'CMakeFiles/Boolean_set_operations_2.dir/all' failed
make[1]: *** [CMakeFiles/Boolean_set_operations_2.dir/all] Error 2
Makefile:94: recipe for target 'all' failed
make: *** [all] Error 2

//solved on 19/6/18 17:55 IST
//Issue was the error in naming classes, it was different at some part of the code

